--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
+  heading: "Dani Arama"
   subheading: "Your awesome subheading"
   banner: "Your image url"
