--- a/_config.yml
+++ b/_config.yml
@@ -140,7 +140,7 @@ yat:
 # it will be always kept on every visit (i.e. no matter
 # the browser is closed or not)
 #
-# night_mode: "auto"
+night_mode: "true"
 
 # Code badge setting
 # You can enable or disable the code badge and so on
